# camp

./: .gitignore  README.md  babel.cfg  pyproject.toml  requirements.txt
app/: __init__.py  config.py  development.py  i18n.py  models.py
app/api/: __init__.py  weather.py
app/auth/: __init__.py  cli.py  forms.py  views.py
app/auth/templates/: login.jinja2
app/cli/: __init__.py  database.py  maps.py  point_of_interest.py  scoreboard.py  teams.py  translate.py  users.py
app/demo/: views.py
app/demo/templates/: demo.jinja2
app/feedback/: forms.py  views.py
app/feedback/templates/: feedback_website.jinja2  feedback_wifi.jinja2
app/helper/: views.py
app/helper/templates/: helper_dashboard.jinja2
app/infopanel/: views.py
app/infopanel/templates/: infopanel.jinja2  weather.jinja2
app/main/: views.py
app/main/templates/: camp_map.jinja2  index.jinja2  team_map.jinja2
app/orga/: views.py
app/orga/templates/: orga_dashboard.jinja2
app/profile/: views.py
app/profile/templates/: my_profile.jinja2  profile.jinja2  team_profile.jinja2  user_profile.jinja2
app/scoreboard/: forms.py  views.py
app/scoreboard/templates/: scoreboard.jinja2
app/settings/: forms.py  views.py
app/settings/templates/: profile_settings.jinja2  set_camp_location_map.jinja2  (+3 more)
app/sponsored/: views.py
app/team/: views.py
app/templates/: base.jinja2  dashboard.jinja2  error.jinja2  fullscreen_centered.jinja2  map.jinja2
app/translations/: additional.jinja2  additional_lazy_translations.jinja2
app/uploads/: __init__.py  views.py
tests/unit/: test_models.py
(+8 files in other folders)
