[project]
name = 'Camp'
description = 'On site webserver for the PsychOlympia'
readme = 'README.md'
version = '0.1.0'
authors = [
    {name = 'Felix Zenk', email = 'felix.zenk@web.de'},
    {email = 'info@psycholympia.de'}
]
requires-python = '>=3.9'
license = {file = 'LICENSE'}

[project.dependencies]
Flask = '>=2.3.2'
Flask-SQLAlchemy = '>=3.0.3'
Flask-Migrate = '>=4.0.4'
Flask-Login = '>=0.6.2'
Flask-Principal = '>=0.4.0'
Flask-Bcrypt = '>=1.0.1'
Flask-WTF = '>=1.1.1'
flask-babel = '>=3.1.0'
python-dotenv = '>=1.0.0'
psycopg2-binary = '>=2.9.6'
click = '>=8.1.3'
SQLAlchemy = '>=2.0.16'
WTForms = '>=3.0.1'

[project.optional-dependencies]
deploy = ['gunicorn']
dev = ['poetry', 'pytest', 'gunicorn']

[project.urls]
'Homepage' = 'https://psycholympia.de'
'Source' = 'https://github.com/PsychOlympia/camp'

[tool.pytest.ini_options]
pythonpath = ['.']
testpaths = ['test/']
